# scratch-RL

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  requirements-dev.txt  requirements-jupyter.txt  requirements.txt  run.py  setup.cfg
algorithms/: __init__.py  q_learning.py
algorithms/aproximate/: Baird-MDP.ipynb  n_step_semi_gradient_sarsa_nn.py  random_walk_1000_fourier_value_function.py  semi_gradient_sarsa.py  semi_gradient_sarsa_fourier.py  semi_gradient_sarsa_nn.py  semi_gradient_sarsa_sgd.ipynb
algorithms/aproximate/policy/: reinforce.ipynb
algorithms/aproximate/value_function/: fourier_value_function_random_walk.py  semi_gradient_sarsa_sgd.ipynb
algorithms/tabular/: __init__.py  first_visit_MC.py  q_learning.py  sarsa.py
common/: __init__.py  constants.py  plotting.py
extras/: Baird-MDP.ipynb  semi_gradient_sarsa_sgd_regressor.ipynb
helpers/: cli.py  constants.py  environments.py  io.py  logio.py  misc.py  models.py  plotting.py
helpers/environment/: __init__.py  blackjack.py  gridworlds.py  random_1D_walk.py
helpers/features/: fourier.py  tile_coding.py
tests/: test_plot.py
