[metadata]
version = 0.1.0
description-file = README.md
license_file = LICENSE.txt

[mypy]
ignore_missing_imports = False
show_error_codes = True
# ignore_override = True

[mypy-tabulate.*]
ignore_missing_imports = True


# pytest pycodestyle configuration
[tool:pytest]
# Function starting with the following pattern are considered for test cases.
python_functions=test_

# pytest pycodestyle configuration
codestyle_max_line_length = 88
codestyle_ignore = E302 W503 E203 E501 E265 E402 E251 E211
codestyle_exclude =
    docs/,
    data/
filterwarnings =
    ignore::ResourceWarning:ruamel[.*]

log_cli = true
log_cli_level = WARNING

[pycodestyle]
max-line-length = 88

[flake8]
max-line-length = 88
ignore = W503, E121, E126, E211, E225, E501, E203, E402, F401, F811, E231
exclude =
    docs
